feat: add notes with polymorphic relation to clients, contacts and activities
